@@ -1644,11 +1644,19 @@ remap_gimple_stmt (gimple *stmt, copy_body_data *id)
 	    gimple_call_set_tail (call_stmt, false);
 	  if (gimple_call_from_thunk_p (call_stmt))
 	    gimple_call_set_from_thunk (call_stmt, false);
-	  if (gimple_call_internal_p (call_stmt)
-	      && IN_RANGE (gimple_call_internal_fn (call_stmt),
-			   IFN_GOMP_SIMD_ORDERED_START,
-			   IFN_GOMP_SIMD_ORDERED_END))
-	    DECL_STRUCT_FUNCTION (id->dst_fn)->has_simduid_loops = true;
+	  if (gimple_call_internal_p (call_stmt))
+	    switch (gimple_call_internal_fn (call_stmt))
+	      {
+	      case IFN_GOMP_SIMD_LANE:
+	      case IFN_GOMP_SIMD_VF:
+	      case IFN_GOMP_SIMD_LAST_LANE:
+	      case IFN_GOMP_SIMD_ORDERED_START:
+	      case IFN_GOMP_SIMD_ORDERED_END:
+		DECL_STRUCT_FUNCTION (id->dst_fn)->has_simduid_loops = true;
+	        break;
+	      default:
+		break;
+	      }
 	}
 
       /* Remap the region numbers for __builtin_eh_{pointer,filter},
