@@ -1,3 +1,8 @@
+2016-09-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/77665
+	* gfortran.dg/gomp/pr77665.f90: New test.
+
 2016-09-22  Paul Thomas  <pault@gcc.gnu.org>
 
 	* gfortran.dg/dtio_11.f90: Correct for changed error messages.
